--- a/lab-00/iac/01-infrastructure/terraform.tfvars.sample
+++ b/lab-00/iac/01-infrastructure/terraform.tfvars.sample
@@ -1,11 +1,36 @@
 #############################################################################
 # TFVars file                                                               #
 #############################################################################
-project_id    = "migueld-playground"
+project_id    = ""
 region        = "europe-west6"
 zone          = "europe-west6-a"
 stack_name    = "backend-otel-blueprints"
-vpc_name      = "vpc-otel-blueprints"
+
+#############################################################################
+# VPC and subnets                                                           #
+#############################################################################
+vpc_name = "vpc-otel-blueprints"
+vpc_subnets = [
+  {
+    subnet_name           = "subnet-gke-europe-west6"
+    subnet_ip             = "10.16.0.0/16"
+    subnet_region         = "europe-west6"
+    subnet_private_access = "true"
+  },
+]
+
+vpc_subnets_secondary_ranges = {
+  "subnet-gke-europe-west6" = [
+    {
+      range_name    = "subnet-gke-europe-west6-services"
+      ip_cidr_range = "10.17.0.0/16"
+    },
+    {
+      range_name    = "subnet-gke-europe-west6-pods"
+      ip_cidr_range = "10.0.0.0/12"
+    },
+  ],
+}
 
 #############################################################################
 # IAP proxy                                                                 #
@@ -23,7 +48,7 @@ gke_cluster_remove_default_node_pool = true
 
 gke_cluster_master_ipv4_cidr_block = "172.16.0.0/28"
 gke_cluster_release_channel        = "REGULAR"
-gke_cluster_version                = "1.27.3-gke.100"
+gke_cluster_version                = "1.29.0-gke.1381000"
 
 gke_cluster_enable_horizontal_pod_autoscaling = true
 gke_cluster_enable_vertical_pod_autoscaling   = false
@@ -93,11 +118,6 @@ gke_cluster_node_pools_taints = {
     }
   ]
 }
-
-keda_operator_version = "2.12.0"
-keda_operator_iam_roles = [
-  "roles/monitoring.viewer",
-]
 
 otel_operator_settings = {
   "manager.featureGates" = "operator.autoinstrumentation.go"
