Remove hard-coded project id

--- a/lab-00/app/api/k8s/deployment.yaml
+++ b/lab-00/app/api/k8s/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             containerPort: 3000
         env:
           - name: PROJECT_ID
-            value: migueld-playground
+            value: PROJECT_ID_VALUE
           - name: TOPIC_ID
             value: blueprints-topic
           - name: SUBSCRIPTION_ID
