--- a/lab-00/app/worker/k8s/gcp.yaml
+++ b/lab-00/app/worker/k8s/gcp.yaml
@@ -4,7 +4,7 @@ metadata:
   name: blueprints-worker-sa
   namespace: blueprints
   annotations:
-      cnrm.cloud.google.com/project-id: migueld-playground
+      cnrm.cloud.google.com/project-id: PROJECT_ID_VALUE
 spec:
   displayName: Service account for Blueprints worker.
 ---
@@ -14,12 +14,12 @@ metadata:
   name: blueprints-worker-policy-member-binding
   namespace: blueprints
 spec:
-  member: serviceAccount:blueprints-worker-sa@migueld-playground.iam.gserviceaccount.com
+  member: serviceAccount:blueprints-worker-sa@PROJECT_ID_VALUE.iam.gserviceaccount.com
   role: roles/pubsub.subscriber
   resourceRef:
     apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
     kind: Project
-    external: projects/migueld-playground
+    external: projects/PROJECT_ID_VALUE
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
@@ -27,12 +27,12 @@ metadata:
   name: blueprints-worker-policy-member-binding-2
   namespace: blueprints
 spec:
-  member: serviceAccount:blueprints-worker-sa@migueld-playground.iam.gserviceaccount.com
+  member: serviceAccount:blueprints-worker-sa@PROJECT_ID_VALUE.iam.gserviceaccount.com
   role: roles/pubsub.viewer
   resourceRef:
     apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
     kind: Project
-    external: projects/migueld-playground
+    external: projects/PROJECT_ID_VALUE
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicy
@@ -47,4 +47,4 @@ spec:
   bindings:
     - role: roles/iam.workloadIdentityUser
       members:
-        - serviceAccount:migueld-playground.svc.id.goog[blueprints/blueprints-worker]
+        - serviceAccount:PROJECT_ID_VALUE.svc.id.goog[blueprints/blueprints-worker]
