--- a/lab-00/app/worker/k8s/deployment.yaml
+++ b/lab-00/app/worker/k8s/deployment.yaml
@@ -16,6 +16,7 @@ spec:
         app: blueprints-worker
         app.kubernetes.io/name: blueprints-worker
         app.kubernetes.io/part-of: blueprints
+        logs: app-sink
     spec:
       initContainers:
         - image: gcr.io/google.com/cloudsdktool/cloud-sdk:alpine
