[refactor] Refactor lab-00

--- a/lab-01/app/skaffold.yaml
+++ b/lab-01/app/skaffold.yaml
@@ -3,6 +3,7 @@ kind: Config
 metadata:
   name: blueprints
 build:
+  googleCloudBuild: {}
   artifacts:
     - image: blueprints-api
       context: api
