--- a/lab-00/iac/terraform.tfvars.sample
+++ b/lab-00/iac/terraform.tfvars.sample
@@ -83,14 +83,14 @@ gke_cluster_node_pools = [
     node_locations            = "europe-west6-a"
     autoscaling               = true
     min_count                 = 1
-    max_count                 = 9
+    max_count                 = 3
     local_ssd_count           = 0
     spot                      = true
     local_ssd_ephemeral_count = 0
     disk_size_gb              = 150
     disk_type                 = "pd-standard"
     image_type                = "COS_CONTAINERD"
-    enable_gcfs               = false
+    enable_gcfs               = true
     enable_gvnic              = false
     auto_repair               = true
     auto_upgrade              = true
