[refactor] Add doc and links to LAB-03

--- a/lab-02/app/api/k8s/deployment.yaml
+++ b/lab-02/app/api/k8s/deployment.yaml
@@ -47,6 +47,18 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "200m"
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
       serviceAccountName: blueprints-api
       nodeSelector:
         layer: blueprints
