[refactor] Documentation for LAB-05

--- a/lab-05/otelcollector/03-collectorconfig.yaml
+++ b/lab-05/otelcollector/03-collectorconfig.yaml
@@ -57,6 +57,7 @@ spec:
           span:
             - attributes["http.target"] == "/healthz"
             - attributes["http.target"] == "/metrics"
+            - attributes["http.target"] == "/readyz"
       batch:
         # batch metrics before sending to reduce API usage
         send_batch_max_size: 200
