--- a/lab-00/iac/terraform.tfvars.sample
+++ b/lab-00/iac/terraform.tfvars.sample
@@ -45,10 +45,11 @@ gke_cluster_regional                 = true
 gke_cluster_enable_private_endpoint  = false
 gke_cluster_enable_private_nodes     = true
 gke_cluster_remove_default_node_pool = true
+gke_cluster_enable_creating_service_account = false
 
 gke_cluster_master_ipv4_cidr_block = "172.16.0.0/28"
 gke_cluster_release_channel        = "REGULAR"
-gke_cluster_version                = "1.29.0-gke.1381000"
+gke_cluster_version                = "1.29.1-gke.1589017"
 
 gke_cluster_enable_horizontal_pod_autoscaling = true
 gke_cluster_enable_vertical_pod_autoscaling   = false
